Space id is added in claimant & rating
