# service/factcheck/model/claimant.go
@@ -3,6 +3,7 @@ package model
 import (
 	"github.com/factly/dega-server/config"
 	"github.com/factly/dega-server/service/core/model"
+	"github.com/jinzhu/gorm"
 )
 
 // Claimant model
@@ -15,4 +16,16 @@ type Claimant struct {
 	MediumID    uint          `gorm:"column:medium_id" json:"medium_id" sql:"DEFAULT:NULL"`
 	Medium      *model.Medium `gorm:"foreignkey:medium_id;association_foreignkey:id" json:"medium"`
 	SpaceID     uint          `gorm:"column:space_id" json:"space_id"`
+}
+
+// BeforeCreate - validation for medium
+func (c *Claimant) BeforeCreate(tx *gorm.DB) (e error) {
+	medium := model.Medium{}
+	medium.ID = c.MediumID
+
+	err := tx.Model(&model.Medium{}).Where(model.Medium{
+		SpaceID: c.SpaceID,
+	}).First(&medium).Error
+
+	return err
 }
