# service/factcheck/model/rating.go
@@ -3,6 +3,7 @@ package model
 import (
 	"github.com/factly/dega-server/config"
 	"github.com/factly/dega-server/service/core/model"
+	"github.com/jinzhu/gorm"
 )
 
 // Rating model
@@ -11,8 +12,20 @@ type Rating struct {
 	Name         string        `gorm:"column:name" json:"name"`
 	Slug         string        `gorm:"column:slug" json:"slug"`
 	Description  string        `gorm:"column:description" json:"description"`
-	NumericValue string        `gorm:"column:numeric_value" json:"numeric_value"`
+	NumericValue int           `gorm:"column:numeric_value" json:"numeric_value"`
 	MediumID     uint          `gorm:"column:medium_id" json:"medium_id" sql:"DEFAULT:NULL"`
 	Medium       *model.Medium `gorm:"foreignkey:medium_id;association_foreignkey:id" json:"medium"`
 	SpaceID      uint          `gorm:"column:space_id" json:"space_id"`
+}
+
+// BeforeCreate - validation for medium
+func (c *Rating) BeforeCreate(tx *gorm.DB) (e error) {
+	medium := model.Medium{}
+	medium.ID = c.MediumID
+
+	err := tx.Model(&model.Medium{}).Where(model.Medium{
+		SpaceID: c.SpaceID,
+	}).First(&medium).Error
+
+	return err
 }
